5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1764_1183.log
== TEST (2019-05-23 17:48:12) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2=zeros(po)
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:49:11) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2=arange(po)
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:49:44) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2=array(po)
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:49:52) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2=array(po)
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:51:58) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2=[None] * po
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:52:57) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2=[None] * po
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:53:21) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:53:32) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- EXECUTION TIME:
0.517293
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:53:41) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= arange(po)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:53:57) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= arange(po)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- EXECUTION TIME:
0.375947
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:54:23) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(int(po))
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:54:58) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:55:12) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- EXECUTION TIME:
0.527556
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:55:23) 
-- CODE:
from numpy import*
v= arr5454
i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:55:25) 
-- CODE:
from numpy import*
v= arr5454
i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- EXECUTION TIME:
0.455881
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 2, in <module>
    v= arr5454
NameError: name 'arr5454' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:55:26) 
-- CODE:
from numpy import*
v= arr5454
i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- EXECUTION TIME:
0.287745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 2, in <module>
    v= arr5454
NameError: name 'arr5454' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:55:31) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
	if(v[i]>=0):
		po+=1
	i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1
print(v2)
-- EXECUTION TIME:
0.611455
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
